# text2DSL

./: .backend.pid  .env.example  .frontend.pid  .gitignore  ADMIN_ENDPOINTS_FIX.md  AGENTS.md  CLI.md  CLI_CHANGES.md  CLI_FEATURES_CHECKLIST.md  CLI_IMPLEMENTATION_SUMMARY.md  CLI_QUICK_REFERENCE.md  CLI_README.md  CLI_USAGE.md  DUPLICATE_ROLE_REMOVAL.md  E2E_TEST_SETUP.md  FORCE_STOP.md  HEALTH_ENDPOINT_ACCURACY.md  LEGACY_REMOVAL.md  LOGIN_FIX.md  Makefile  NVIDIA_NIM_SETUP.md  OBSERVABILITY_IMPLEMENTATION.md  OPENSEARCH_RAG_SETUP.md  README.md  ROLE_SYSTEM.md  ROLE_SYSTEM_ANALYSIS.md  SCENARIO3_COMPLETION.md  SCENARIO_4_IMPLEMENTATION.md  STARTUP_DETECTION.md  USER_ROLE_FUNCTION.md  WEBSOCKET_INTEGRATION_SUMMARY.md  alembic.ini  config.yaml.example  design.md  docker-compose.test.yml  docker-compose.yml  manage.sh  navigation.md  pyproject.toml  requirements-dev.txt  (+6 more)
docker/: docker-compose.yml
docker/mongodb-test/: seed.js
docker/postgres/: init.sql  seed.sql
docker/postgres-test/: seed.sh  seed.sql
docs/: OBSERVABILITY.md  OBSERVABILITY_QUICKSTART.md  REVIEW_QUEUE_API.md  USER_SCENARIOS.md  embedding_service_usage.md  prometheus-example.yml  splunk_provider_usage.md  text2dsl_alerts.yml
examples/: splunk_provider_example.py  websocket_client.py
frontend/: .env.example  .gitignore  AUTH_IMPLEMENTATION.md  CHANGES.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COMPONENT_ARCHITECTURE.md  DEPLOYMENT.md  E2E_IMPLEMENTATION_SUMMARY.md  E2E_TESTS_README.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  Makefile  QUICK_START.md  README.md  README_FEATURES.md  TESTING_CHECKLIST.md  index.html  package-lock.json  package.json  playwright.config.js  setup.sh  tailwind.config.js  verify-e2e-setup.sh  vite.config.js
frontend/e2e/: global-setup.js  scenario-0-user-management.spec.js  scenario-1-admin-setup.spec.js  scenario-2-schema-annotation.spec.js  scenario-3-query-generation.spec.js  scenario-4-review-queue.spec.js  scenario-5-feedback.spec.js
frontend/e2e/fixtures/: auth.fixture.js  feedback.fixture.js  query.fixture.js  schema.fixture.js  workspace.fixture.js
frontend/e2e/integration/: README.md  admin-setup.integration.spec.js  query-generation.integration.spec.js  rag-search.integration.spec.js  schema-retrieval.integration.spec.js
frontend/e2e/pages/: AdminDashboardPage.js  ChatPage.js  LoginPage.js  ReviewPage.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AdminLayout.jsx  AdminSidebar.jsx  AnnotationEditor.jsx  AppLayout.jsx  Breadcrumb.jsx  ChatMessage.jsx  ConversationHistory.jsx  ErrorBoundary.jsx  FeedbackButton.jsx  FeedbackChart.jsx  KeyboardShortcutsHelp.jsx  MobileNav.jsx  NavigationProgress.jsx  PageHeader.jsx  ProgressIndicator.jsx  ProtectedRoute.jsx  ProviderSelect.jsx  QueryInput.jsx  RouteErrorBoundary.jsx  SchemaTree.jsx  SettingsPanel.jsx  SkeletonLoader.jsx  WelcomeScreen.jsx  WorkspaceSelector.jsx
frontend/src/constants/: routes.js
frontend/src/contexts/: WorkspaceContext.jsx
frontend/src/hooks/: useAuth.jsx  useKeyboardShortcuts.js  useNavigationProgress.js  useWebSocket.js
frontend/src/pages/: AdminDashboard.jsx  AdminUsers.jsx  Chat.jsx  Connections.jsx  FeedbackStats.jsx  Login.jsx  NotFound.jsx  ProviderDetail.jsx  Providers.jsx  Register.jsx  Review.jsx  SchemaAnnotation.jsx  UserProfile.jsx  WorkspaceDetail.jsx  Workspaces.jsx
frontend/src/styles/: App.css  prism-custom.css
scripts/: README.md  index_sample_queries.py
sdk/: LICENSE  MANIFEST.in  README.md  SDK_COMPLETION_REPORT.md  pyproject.toml  setup.py
sdk/examples/: basic_query.py  multi_turn_conversation.py  quickstart.py  rag_management.py  websocket_streaming.py
sdk/tests/: __init__.py  test_client.py  test_integration.py  test_models.py  test_websocket.py
sdk/text2x_client/: __init__.py  client.py  models.py  websocket.py
src/text2x/: cli.py  config.py  models.py
src/text2x/agentcore/: README.md  __init__.py  client.py  config.py  registry.py  runtime.py  strands_runtime.py
src/text2x/agents/: __init__.py  annotation_agent.py  base.py  orchestrator.py  query_builder.py  rag_retrieval.py  schema_expert.py  validator.py
src/text2x/api/: app.py  auth.py  middleware.py  models.py  state.py  websocket.py
src/text2x/llm/: __init__.py  litellm_client.py
src/text2x/migrations/: env.py
src/text2x/models/: __init__.py  admin.py  annotation.py  audit.py  base.py  conversation.py  feedback.py  rag.py  user.py  (+1 more)
tests/: config.py  test_admin.py  test_admin_api.py  test_all_repositories.py  test_annotation_agent.py  test_annotation_flow.py  test_auth.py  test_embedding_service.py  test_feedback.py  test_feedback_flow.py  test_hypothesis.py  test_hypothesis_summary.md  test_nosql_provider.py  test_opensearch_service.py  test_query_generation.py  test_repositories.py  test_review_flow.py  test_splunk_provider.py  test_sql_provider.py  test_strands_agent.py  test_users.py  test_websocket.py  test_websocket_integration.py
tests/agentcore/: test_strands_integration.py
tests/fixtures/: sample_annotations.json  sample_queries.json
tests/integration/: __init__.py  conftest.py  test_llm_integration.py  test_query_flow.py
(+88 files in other folders)
