[project]
name = "text2dsl"
version = "0.1.0"
description = "Multi-agent system for converting natural language to executable queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "sqlparse>=0.4.4",
    "redis>=5.0.0",
    "opensearch-py>=2.4.0",
    "boto3>=1.34.0",
    "litellm>=1.0.0",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "websockets>=12.0",
    "splunk-sdk>=2.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    "tenacity>=8.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.scripts]
text2x = "text2x.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2x"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
