[project]
name = "text2dsl"
version = "0.1.0"
description = "Multi-agent system for converting natural language to executable queries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "sqlparse>=0.4.4",
    
    # Cache & Search
    "redis>=5.0.0",
    "opensearch-py>=2.4.0",
    
    # AWS & LLM
    "boto3>=1.34.0",
    "litellm>=1.0.0",
    
    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    
    # HTTP client
    "httpx>=0.26.0",
    
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    
    # Data providers
    "splunk-sdk>=2.0.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    
    # Observability
    "prometheus-client>=0.19.0",
    "python-json-logger>=2.0.7",
    
    # Utilities
    "tenacity>=8.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.scripts]
text2x = "text2x.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "hypothesis>=6.100.0",
    "coverage>=7.0.0",
]
test = [
    "playwright>=1.50.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/text2x"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
